Updated CSS, header behaviour and fixed clock alignment issue
This web app isn't intended to be used on mobile devices, so hiding the navigation links for small screens is beyond the use case.

--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -1,3 +1,12 @@
 html, body {
 	font-family: 'Roboto', 'Helvetica', sans-serif;
 }
+
+#notice {
+	font-family: 'Roboto', sans-serif;
+}
+
+#clock {
+	color: white;
+	font-family: 'Roboto', sans-serif;
+}
